--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,8 +1,8 @@
 @import url(../font.scss);
 
 .container {
-  height: 100vh;
-  background-color: #E7E3EB;
+  // height: 100vh;
+  // background-color: #E7E3EB;
   .header {
       padding: 15px 20px;
       background-color: #6200EE;
@@ -23,4 +23,32 @@
   transform: translate(-50%, -50%);
   }
 
+}
+
+table {
+  width: 70%;
+  // border: 1px solid #555;
+  padding: 25px;
+  max-width: 920px;
+  tr td:first-child {
+    width: 40%;
+  }
+  th {
+    height: 40px;
+  }
+  th, td {
+    border: 1px solid #555;
+    padding: 5px;
+    border-radius: 10px;
+  }
+}
+
+.section-head {
+  margin-left: 25px;
+}
+
+@media only screen and (max-width: 744px) {
+  table{
+    width: 95%;
+  }
 }
