add blue background color to th in table

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -34,7 +34,9 @@ table {
     width: 40%;
   }
   th {
-    height: 40px;
+    height: 30px;
+    background-color: #104E8B;
+    color: white;
   }
   th, td {
     border: 1px solid #555;
