--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -49,6 +49,23 @@ table {
   margin-left: 25px;
 }
 
+.comp-space {
+  margin-bottom: 75px;
+}
+
+.p-tighten {
+  margin-top: 8px;
+  margin-bottom: 0;
+}
+
+.p-tighten:first-child {
+  margin-top: 16px;
+}
+
+#part-wrap {
+    padding: 5px 25px 25px 25px;
+}
+
 @media only screen and (max-width: 744px) {
   table{
     width: 95%;
