--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -33,6 +33,9 @@ table {
   tr td:first-child {
     width: 40%;
   }
+  tr td:nth-child(3) {
+    min-width: 60px;
+  }
   th {
     height: 30px;
     background-color: #104E8B;
@@ -43,6 +46,10 @@ table {
     padding: 5px;
     border-radius: 10px;
   }
+  #no-widen {
+    width: auto;
+  }
+
 }
 
 .section-head {
