install font awesome and add hamburger toggle to nav, recolor header b.g. blue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ body {
 
 /***   Header   ***/
 .logo-contain {
-  background-color: #F1F1F1;
+  background-color: #1dc4e4;
   max-width: 100%
   /* padding: 5px; */
 }
