fully function collapsible nav component with background color and toggler size/position

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,10 +71,10 @@ body {
 
 }
 
-li a:hover {
+/* li a:hover {
   background-color: #555;
   color: white;
-}
+} */
 
 /***   Part Info Section   ***/
 #part-headline {
