--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -34,9 +34,11 @@
   top:0;
   left: 0;
   right: 0;
-  margin-top: -30px;
+  margin-top: -16px;
   ul {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
   li {
     text-align: left;
@@ -48,6 +50,9 @@
     text-decoration: none;
     text-transform: uppercase;
     color: white;
+  }
+  a:hover {
+    background-color: #039cd3;
   }
 }
 
@@ -139,6 +144,9 @@ table {
     font-size: 30px;
     margin-top: -55px;
   }
+   .topnav {
+     margin-top: -18px;
+   }
 }
 
 @media only screen and (min-width: 1024px) {
@@ -154,5 +162,8 @@ table {
   #icon {
     font-size: 35px;
     margin-top: -60px;
+  }
+  .topnav {
+    margin-top: -20px;
   }
 }
