replace twitter, facebook with fontawesome icons

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -34,7 +34,7 @@
   top:0;
   left: 0;
   right: 0;
-  margin-top: -16px;
+  margin-top: -13px;
   ul {
     list-style-type: none;
     margin: 0;
@@ -127,6 +127,9 @@ table {
   #icon {
     margin-top: -35px;
     font-size: 25px;
+  }
+  .topnav {
+    margin-top: -16px;
   }
 }
 
