--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -43,6 +43,9 @@
   li {
     text-align: left;
   }
+  li:last-child {
+    background-color: #039cd3;
+  }
   a {
     display: block;
     padding: 12px 20px;
