--- a/src/_font.scss
+++ b/src/_font.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: 'Nunito';
   src: url('../Assets/Fonts/Nunito-ExtraBoldItalic.ttf') format('truetype');
-
+  font-style: italic;
 }
