--- a/src/font.scss
+++ b/src/font.scss
@@ -2,4 +2,5 @@
   font-family: 'Open Sans Regular';
   src: url('./Assets/Fonts/OpenSans-Regular.ttf') format('truetype');
   font-weight: normal;
+  // font-style: italic;
 }
