fix the incorrect property database value in imageModel model, carpart database, partImg comp

--- a/src/font.scss
+++ b/src/font.scss
@@ -1,6 +1,5 @@
 @font-face {
-  font-family: 'Open Sans Regular';
-  src: url('./Assets/Fonts/OpenSans-Regular.ttf') format('truetype');
-  font-weight: normal;
-  // font-style: italic;
+  font-family: 'MyFont';
+  src: url('./Assets/Fonts/SourceCodePro-Medium') format('truetype');
+  font-style: normal;
 }
