--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -1,14 +1,9 @@
 @use '../font';
 
-// @font-face {
-//   font-family: 'MyFont';
-//   src: url('../Assets/Fonts/OpenSans-Regular.ttf') format('truetype');
-//   font-weight: 600;
-//   font-style: normal;
-// }
+
 
 .topnav a, .features, .comp-space {
-  font-family: 'Open Sans Regular';
+  font-family: 'MyFont', monospace;
 }
 
 #part-headline {
