--- a/src/font.scss
+++ b/src/font.scss
@@ -1,5 +1,5 @@
 @font-face {
   font-family: 'Open Sans Regular';
-  src: url('./Assets/Fonts/OpenSans-Regular.ttf') format('truetype');
+  src: './Assets/Fonts/OpenSans-Regular.ttf' format('truetype');
   font-weight: normal;
 }
