--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -15,6 +15,9 @@ $secondary: #181739;
   font-family: 'MyFont', monospace;
 }
 
+h2 {
+  color: $secondary;
+}
 #part-headline {
   font-size: 42px;
   line-height: 48px;
@@ -72,7 +75,7 @@ $secondary: #181739;
   }
   a {
     display: block;
-    padding: 12px 20px;
+    padding: 9px 20px;
     // font-weight: bold;
     font-size: 18px;
     font-weight: 400;
