--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -76,9 +76,7 @@ h2 {
   a {
     display: block;
     padding: 9px 20px;
-    // font-weight: bold;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 17px;
     text-decoration: none;
     text-transform: uppercase;
     color: black;
@@ -157,6 +155,7 @@ table {
 
 #part-wrap {
     padding: 5px 25px 5px 25px;
+    max-width: 860px;
 }
 
 .grow-height {
