--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,12 +71,12 @@ body {
 }
 
 
-/***   Part Info Section   ***/
+/***   Part Image Section   ***/
 
 
 .flex-container {
   display: flex;
-  padding: 10px 25px;
+  padding: 20px 25px;
 }
 
 .flex-1 {
