--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -4,7 +4,7 @@ $navajo: #FFDB9E;
 $creamsicle: #FFD182;
 $primary1: #EFEDF1;
 $primary2: #6200EE;
-$primary3: #326380;
+$primary3: #2F5B7A;
 $secondary: #181739;
 
 .topnav a, .features, .comp-space {
@@ -90,6 +90,27 @@ h2 {
   background-color: $navajo;
 }
 
+/***   Part Image Section   ***/
+
+
+.flex-container {
+  display: flex;
+  padding: 20px 25px;
+}
+
+.flex-1 {
+  flex-basis: 800px;
+}
+
+.flex-2 {
+  flex-basis: 300px;
+  flex-shrink: 2;
+}
+
+.flex-1 img {
+  max-width: 100%;
+  height: auto;
+}
 .flex {
   display: flex;
 }
@@ -108,6 +129,19 @@ h2 {
 // .second-flex {
 //   flex-basis: 300px;
 // }
+
+/***   PartImg component  ***/
+#part-img {
+  p {
+    margin-bottom: 26px;
+    margin-top: 23px;
+  }
+  a {
+    img {
+      margin-top: 15px;
+    }
+  }
+}
 
 table {
   width: 70%;
